# Lead-Qualification-Agent-

./: .env.example  .gitignore  GEMINI.md  MASTER.md  PROGRESS.md  README.md  config.py  main.py  pyproject.toml
.cursor/: mcp.json
app/: __init__.py  agent.py
app/agents/: __init__.py  outreach_agent.py  qualification_agent.py  research_agent.py
app/api/: __init__.py  server.py
app/mcp_server/: __init__.py  __main__.py  approval_store.py  server.py
app/mcp_tools/: __init__.py  _mock_research.py  _research_extract.py  company_research_tool.py  crm_lookup_tool.py  lead_score_tool.py  outreach_tool.py  serper_search_tool.py  website_analysis_tool.py
app/memory/: __init__.py
app/models/: __init__.py
app/security/: __init__.py
app/services/: __init__.py  email_delivery_service.py  outreach_service.py  qualification_service.py  research_service.py
app/skills/: __init__.py  outreach_skill.py  qualification_skill.py
app/utils/: __init__.py  api_budget.py  cache.py  logger.py  provider_errors.py
data/: mock_data.json  mock_research.json  sample_leads.csv
evaluation/: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Sidebar.jsx  TierBadge.jsx
scripts/: run_mcp_server.bat  setup_gmail_token.py
tests/: test_agents.py  test_email_delivery_service.py  test_mcp_server.py  test_outreach.py  test_provider_errors.py  test_qualification.py  test_research_blend.py  test_research_extract.py  test_research_formatting.py  test_security.py  test_setup.py
(+6 files in other folders)
