[project]
name = "lead-qualification-ai"
version = "0.1.0"
description = "Multi-agent AI system that researches, qualifies, scores, and prioritizes sales leads. Capstone for Google 5-Day AI Agents Course 2026 (Agents for Business track)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "tavily-python>=0.5.0",
    "firecrawl-py>=1.0.0",
    "mcp>=1.28.1",
    "google-api-python-client>=2.198.0",
    "google-auth-oauthlib>=1.4.0",
    "google-auth-httplib2>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]
